--- a/templates/show.html
+++ b/templates/show.html
@@ -25,7 +25,7 @@ $(document).ready(function(){
         {label: "{{ item[0] }}", value: {{ item[1] }}, color:"{{ item[2] }}"},
     {% endfor %}
     ];
-    var myPieChart = new Chart(ctx).Pie(data,{animationSteps: 60});
+    var pie_chart = new Chart(ctx).Pie(data,{animationSteps: 60});
     
     function diff_rows(old_, new_){
         n_o = old_.length;
@@ -45,7 +45,7 @@ $(document).ready(function(){
 
     timeout = [3,4,6,9,14,22,35,56,90,145];
     idx_timeout = 0;
-    function refresh(myChart){
+    function refresh(){
         var p_id = location.search.substring(1).split('=')[1];
         var p_ajax = {
             type: "POST",
@@ -57,11 +57,12 @@ $(document).ready(function(){
                 rows = d.rows;
                 if (diff_rows(data, rows) == 1){
                     data = rows;
-                    myChart.destroy();
-                    myPieChart = new Chart(ctx).Pie(data,{animation: false});
+                    pie_chart.destroy();
+                    pie_chart = new Chart(ctx).Pie(data,{animation: false});
                     this.ret = 1;
                 }
-                this.ret = 0;
+                else
+                    this.ret = 0;
             },
             error: function(e,b,c){
                 alert("ajax error function.");
